0025605: Optimize methods of gp_* classes to avoid sqrt() function calling

Some methods have been optimized and commented.